--- a/.github/workflows/check_websites.yml
+++ b/.github/workflows/check_websites.yml
@@ -18,15 +18,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Set up Python 3.8
+
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version-file: ".python-version"
+            
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+          
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv sync --locked --all-extras --dev
           sudo apt-get install sqlite3
 
       - id: set-matrix
@@ -50,14 +53,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version-file: ".python-version"
+            
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv sync --locked --all-extras --dev
           sudo apt-get install sqlite3
           if [ "${{ matrix.type }}" = "dynamic" ] ; then
                 sudo apt-get update
@@ -71,7 +77,7 @@ jobs:
           echo "URL: ${{ matrix.url }}, selector: ${{ matrix.selector }}"
           mkdir text
           mkdir hashes
-          new_hash=$(./lib/website_hash.py -u "${{ matrix.url }}" -s "${{ matrix.selector }}" -t "${{ matrix.type }}" -o text/${{ matrix.hash }}.txt --verbose)
+          new_hash=$(uv run ./lib/website_hash.py -u "${{ matrix.url }}" -s "${{ matrix.selector }}" -t "${{ matrix.type }}" -o text/${{ matrix.hash }}.txt --verbose)
           echo $new_hash
           echo $new_hash > hashes/${{ matrix.hash }}.txt
           echo "new_hash=$new_hash" >> $GITHUB_OUTPUT
@@ -125,14 +131,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version-file: ".python-version"
+            
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          uv sync --locked --all-extras --dev
           sudo apt-get install sqlite3
 
       - name: Populate database
